--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kevin Roa</title>
     <link rel="icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <!-- Icons -->
     <script defer src="./node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
-    <title>Vite App</title>
   </head>
   <body>
     <div id="app"></div>
