--- a/index.html
+++ b/index.html
@@ -2,17 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kevin Roa</title>
-    <link rel="icon" type="image/png" href="/src/assets/logo.png" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <!-- Icons -->
-    <script defer src="./node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+    <title>Kevin Roa | Software Engineer</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
