--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="qhpvld7Dz_kSVRDTWyc41faTZVUlxt1E45JOZA44G2s" />
     <title>Kevin Roa</title>
     <link rel="icon" type="image/png" href="/assets/logo.6e3a34db.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
